# ZJU-CG-Lab

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Example.cpp  README.md  build_windows_mingw.bat  build_windows_msvc.bat  engine_log.txt  xmake.lua
assets/: META.yml  triangle.fshader  triangle.vshader
assets/assets/: META.yml
assets/assets/shader/: default.fs  default.vs
assets/shader/: default.fs  default.vs
docs/: Docs for our little engine.md
docs/Abandoned/: GameObject.cpp  Material.cpp  Mesh.h  Tags.h
docs/legacy/: Shader.h  Texture.h
src/: CMakeLists.txt
src/Editor/: CMakeLists.txt  Context.cpp  Context.h  Editor.cpp  Editor.h  EditorMain.cpp  EditorSettings.h  Utils.cpp  Utils.h
src/Editor/Module/: EditorModule.cpp  EditorModule.h  Explorer.cpp  Explorer.h  MainMenu.cpp  MainMenu.h  PropertyView.cpp  PropertyView.h  SceneManager.cpp  SceneManager.h  Viewport.cpp  Viewport.h
src/Engine/: CMakeLists.txt  Component.h  ComponentArray.cpp  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  Coordinator.cpp  Coordinator.h  Engine.cpp  Engine.h  EngineSettings.h  Entity.h  EntityManager.cpp  EntityManager.h  GameObject.cpp  GameObject.h  Material.h  Mesh.c  Mesh.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  SystemWrapper.cpp  SystemWrapper.h  Tags.h  Texture.cpp  Texture.h  a.cpp  a.h
src/Engine/Components/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  Mesh.cpp  Mesh.h  Rigidbody.cpp  Rigidbody.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
src/Engine/Components/Collider/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h  SphereCollider.cpp  SphereCollider.h
src/Engine/Others/: CollisionInfo.h  Layer.cpp  Layer.h  PhysicsMaterial.cpp  PhysicsMaterial.h
src/Engine/Platform/: ConInterface.cpp  ConInterface.h
src/Engine/Platform/Windows/: ConInterfaceWinImpl.cpp  ConInterfaceWinImpl.h
src/Engine/Systems/: CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  LogSystem.cpp  LogSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ResourceSystem.cpp  ResourceSystem.h  TranslateSystem.cpp  TranslateSystem.h  WindowSystem.cpp  WindowSystem.h
src/Engine/Tools/: Tools.cpp  Tools.h
src/Test/: CMakeLists.txt  Shader.cpp  TestHeader.h  TestMain.cpp  test.cpp
